fix spacing

--- a/src/styles/utilities/_utilities.scss
+++ b/src/styles/utilities/_utilities.scss
@@ -8,6 +8,11 @@
   margin-top: $space-4x;
 }
 
+.mb-0
+{
+  margin-bottom: 0;
+}
+
 .my-4
 {
   margin-top: $space-4x;
